--- a/year/2022.md
+++ b/year/2022.md
@@ -51,7 +51,7 @@
 | 2022.2.10 | 杂志   | CM NOW 2022年3月号                                           | [网盘](https://pan.baidu.com/s/14-qIxIk9-wNLtL6KcHPsqw?pwd=0122) |                                                              |
 | 2022.2.10 | CM     | Apuweiser-riche品牌形象代言人就任(Spring)                            | [网盘](https://pan.baidu.com/s/1hzWB_5Wj_coGXGfWF5qEKQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220210_apu_catalog.html) |
 | 2022.2.12 | 乃木坂 | 乃木坂46 生田绘梨花毕业演唱会（for J-LODlive）               | [生](https://www.bilibili.com/video/BV1du411975e) ‖ [油管](https://www.youtube.com/watch?v=zMUkljR9Z1U) |                                                              |
-| 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会                          |                                                              |                                                              |
+| 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会收录                          |                                                              |                                                              |
 | 2022.2.18 | 电影   | 『行骗天下JP 英雄篇』making                                  | [生](https://www.bilibili.com/video/BV1JY41157Vn) ‖ [油管](https://www.youtube.com/watch?v=mrW5n5Ent9U) |                                                              |
 | 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                              |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                         [采访](https://weibo.com/ttarticle/p/show?id=2309404750309825315927#_0)‖[视频](https://weibo.com/5177703789/LlnJDFJXC)                                     |
 | 2022.2.19 | 音乐   | Sound Inn "S"                                                | [熟](https://www.bilibili.com/video/BV1ri4y1r7Gj)  |                      |
@@ -83,15 +83,15 @@
 | 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 | [熟](https://www.bilibili.com/video/BV1P34y1j7mN)  |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
 | 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  | [微博](https://weibo.com/5177703789/Ln5B7E8dy)  |[翻译](https://weibo.com/ttarticle/p/show?id=2309404762235531822179) |
 | 2022.4.9 | 音乐   | 富士台 MUSIC FAIR 18:00～18:30『四月は君の嘘』- 『The Beautiful Game』『旅に出よう』『Speed Of Sound\~カラフルに輝きながら\~』 | [熟](https://www.bilibili.com/video/BV15L4y157Pc)  | |
-| 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: INI『CALL 119』 櫻坂46『僕のジレンマ』 ITZY『Voltage』  | [熟](https://www.bilibili.com/video/BV1nY4y1v7zx)   |                                        |
+| 2022.4.9 | 音乐   | 『Venue101』#1 MC 23:00~ 嘉宾: INI『CALL 119』 櫻坂46『僕のジレンマ』 ITZY『Voltage』  | [熟](https://www.bilibili.com/video/BV1nY4y1v7zx)   |                                        |
 | 2022.4.16 | 音乐   | 発表！Nコン2022課題曲(旁白) 15:00〜15:30 |   [生](https://www.bilibili.com/video/BV1V94y1o74N)     |   [主页](https://tvguide.myjcom.jp/detail/?channelType=2&serviceCode=1032_32737&eventId=23489&programDate=20220416&app=1)                                                           |
-| 2022.4.16 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 雨のパレード『first step』 ALI『TEENAGE CITY RIOT feat. R-指定』 NiziU『ASOBO』  |  [熟](https://www.bilibili.com/video/BV1zY4y1a7gn)  |                     |
+| 2022.4.16 | 音乐   | 『Venue101』#2 MC 23:00~ 嘉宾: 雨のパレード『first step』 ALI『TEENAGE CITY RIOT feat. R-指定』 NiziU『ASOBO』  |  [熟](https://www.bilibili.com/video/BV1zY4y1a7gn)  |                     |
 | 2022.4.19  | 杂志 | 『BARFOUT!』 バァフアウト! 2022年5月号  Volume 320          | [微博](https://weibo.com/5177703789/LpjxhyJYn)  |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |       
 | 2022.4.21 | 杂志   | 『MAQUIA(マキア)』2022年6月号  | [微博](https://weibo.com/5177703789/Lpn4c5dmq) | [试读](https://weibo.com/5177703789/Lpig79Ps9)|
 | 2022.4.21 | 杂志   | 『Myojo』2022年6月号  | [微博](https://weibo.com/5177703789/LpwCfhnHM) | |
-| 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKY-HI『Bare-Bare』 羊文学『光るとき』 Lucky Kilimanjaro『週休8日』 |  [熟](https://www.bilibili.com/video/BV1PF411M7Ht)  |                        |
+| 2022.4.23 | 音乐   | 『Venue101』#3 MC 23:00~ 嘉宾: SKY-HI『Bare-Bare』 羊文学『光るとき』 Lucky Kilimanjaro『週休8日』 |  [熟](https://www.bilibili.com/video/BV1PF411M7Ht)  |                        |
 | 2022.4.27 | 杂志   | 『TV LIFE』2022年9号  | [微博](https://weibo.com/5177703789/LqlX0mARu) | |
-| 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [熟](https://www.bilibili.com/video/BV1mT4y1z75q) |                  |
+| 2022.4.30 | 音乐   | 『Venue101』#4 MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [熟](https://www.bilibili.com/video/BV1mT4y1z75q) |                  |
 | 2022.5.4 | CM     | Apuweiser-riche Summer发表                            | [网盘](https://pan.baidu.com/s/1K-c6BuMOZXFBG96_Tfl7mQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220504_apu_catalog.html) |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                         [新闻图包](https://pan.baidu.com/s/1YlPwnXCI2N-aPEkX_PLRng?pwd=d3mn)                                     |
 | 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |   [cut](https://www.bilibili.com/video/BV14r4y1t79V)            |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
@@ -103,33 +103,34 @@
 | 2022.5.13 | 新闻   | ZIP!『e.design事故保险』            |     [熟](https://www.bilibili.com/video/BV1Kr4y1b7qR)       |   
 | 2022.5.14 | 新闻   | 闹钟TV-『四月は君の嘘』              |   [生](https://www.bilibili.com/video/BV1uY411w7Pf)         |   
 | 2022.5.14 |	音乐	|『映画音楽はすばらしい！Ⅳ』21:00重播 BS4K | | |
-| 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  BE:FIRST『Bye-Good-Bye』 LUCKY TAPES『ナイトダイバー』 TREASURE『JIKJIN』  | [熟](https://www.bilibili.com/video/BV1sa41177GX)   |                        |
+| 2022.5.14 | 音乐   | 『Venue101』#5 MC 23:00~ 嘉宾:  BE:FIRST『Bye-Good-Bye』 LUCKY TAPES『ナイトダイバー』 TREASURE『JIKJIN』  | [熟](https://www.bilibili.com/video/BV1sa41177GX)   |                        |
 | 2022.5.15  | 乃木坂 | 乃木坂46 十周年演唱会                       |  [微博](https://weibo.com/tv/show/1034:4769683459735651)        |      |
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |  [熟](http://www.mytvbt.net/viewthread.php?tid=106256)        |      |
 | 2022.5.18  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |  [网盘](https://pan.baidu.com/s/1L-tlb9J5QTN8FwLg2duhkg?pwd=wwbb)  |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
 | 2022.5.20 | 杂志   | 『東京カレンダー』2022年7月号  | [微博](https://weibo.com/5177703789/LtMsbxmg2) | [花絮](https://weibo.com/tv/show/1034:4771974988365836) ‖[采访](https://weibo.com/ttarticle/p/show?id=2309404773850767557543)|
-| 2022.5.21 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  JO1『WithUs』 Penthouse『流星群』 緑黄色社会『陽はまた昇るから』  | [熟](https://www.bilibili.com/video/BV11U4y1R7PS)   |                        |
-| 2022.5.28 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  日向坂46『僕なんか』TOMORROW_X_TOGETHER『GOOD_BOY_GONE_BAD』GENERATIONS from EXILE TRIBE『新しい世界』  |  |                        |
+| 2022.5.21 | 音乐   | 『Venue101』#6 MC 23:00~ 嘉宾:  JO1『WithUs』 Penthouse『流星群』 緑黄色社会『陽はまた昇るから』  | [熟](https://www.bilibili.com/video/BV11U4y1R7PS)   |                        |
+| 2022.5.28 | 音乐   | 『Venue101』#7 MC 23:00~ 嘉宾:  日向坂46『僕なんか』TOMORROW_X_TOGETHER『GOOD_BOY_GONE_BAD』GENERATIONS from EXILE TRIBE『新しい世界』  | [生](https://pan.baidu.com/s/1lprUkIeYpMwVvZwp9k7lxA?pwd=0122) |                        |
 | 2022.5.30 | 新闻   | THE TIME - 写真集半年榜 生田绘梨花cut           |   [熟](https://weibo.com/tv/show/1034:4775244293144622)         |  
 | 2022.5.31 | 杂志   | 『周刊FLASH』2022年6月14日号  | [微博](https://weibo.com/5177703789/LvyY3eh62) | [彩图](https://smart-flash.jp/showbiz/184315)|
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
-| 2022.6.4 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  新東京『Cynical City』Sexy Zone『Forever Gold』milet『Walkin' In My Lane』モーニング娘。'22『Chu Chu Chu 僕らの未来』  |  |    远程                    |
+| 2022.6.4 | 音乐   | 『Venue101』#8 MC 23:00~ 嘉宾:  新東京『Cynical City』Sexy Zone『Forever Gold』milet『Walkin' In My Lane』モーニング娘。'22『Chu Chu Chu 僕らの未来』  |[生](https://pan.baidu.com/s/1xBQJf0qXM1Mxyp0sri6YKw?pwd=0122)  |    远程                    |
 | 2022.6.5  | 番组 | 『乃木坂工事中』10周年 Birthday Live 潜入                    | [熟](https://www.bilibili.com/video/BV1Lt4y1H7cz)                                                             |                                                              |
 | 2022.6.8 | 新闻   | THE TIME - 出演『OLD ROOKIE』 生田绘梨花cut           |   [熟](https://weibo.com/tv/show/1034:4778102640017506)         | [新闻](https://weibo.com/5177703789/LwHobaq0q)  ‖ [留言](https://weibo.com/5177703789/LwLNqjnjY)      |  
 | 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
-| 2022.6.11 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  ［Alexandros］『無心拍数』NCT DREAM『Beatbox』Stray Kids『MANIAC -Japanese ver.-』SEVENTEEN『HOT』  |  |           远程             |
+| 2022.6.11 | 音乐   | 『Venue101』#9 MC 23:00~ 嘉宾:  ［Alexandros］『無心拍数』NCT DREAM『Beatbox』Stray Kids『MANIAC -Japanese ver.-』SEVENTEEN『HOT』  |[生](https://pan.baidu.com/s/1opLdfWCbVHkmY59MHfG3uw?pwd=0122)  |           远程             |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
 | 2022.6.18 | 音乐 | 『Venue101EXTRA』NHK大阪ホール公開収録 19:00~20:45            |                                                              |                                                              |
 | 2022.6.18 | 电视剧 | 『世にも奇妙な物語'22 夏の特別編』『メロディに乗せて』夜9時〜             |    [熟](http://www.mytvbt.net/viewthread.php?tid=106236&extra=page%3D1)                                                          |                                                              |
 | 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |     [微博](https://weibo.com/5177703789/LyNwgg8x9)                                                         |                                                              |
 | 2022.6.22 | CM | 参议院26次选举推动形象大使             |     [熟](https://www.bilibili.com/video/BV1fT411G7WC)                                                         |   [特设主页](https://www.soumu.go.jp/2022senkyo/)                                                           |
+| 2022.6.22 | 新闻   | バリはやッ!ZIP!参议院26次选举相关         |   [网盘](https://pan.baidu.com/s/1TEOAAqDcKq_FHLL7J7TqrA?pwd=0122)         |      |  
 | 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
-| 2022.6.25 | 电视剧 | TBS『OLD ROOKIE』ナビ  16:30〜17:00           |                                                              |                                                              |
-| 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1             |                                                              |                                                              |
+| 2022.6.25 | 电视剧 | TBS『OLD ROOKIE』ナビ  16:30〜17:00           |    [生](https://www.bilibili.com/video/BV1i94y117sK?p=6&t=1058.9)                                                          |                                                              |
+| 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1 Juice=Juice『「ひとりで生きられそう」って それってねぇ、褒めているの?』 ELAIZA『Close to you』 梅田サイファー『トラボルタカスタム』 yama『桃源郷』          |   [生](https://www.bilibili.com/video/BV1ZY4y1J7tJ)                                                           |                                                              |
 | 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 18:00~21:00            |                                                              |                                                              |
 | 2022.6.26 | 电视剧 | 『OLD ROOKIE』21:00~             |                                                              |                                                              |
 | 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.1)                           |                                                              |                                                              |
-| 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10           |                                                              |                                                              |
+| 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10   BE:FIRST『Betrayal Game』由薫『lullaby』フォーエイト48『ロミエット』asmi『PAKU』Dios『Virtual Castle』        |                                                              |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                                              |                                                              |
 
