--- a/year/2022.md
+++ b/year/2022.md
@@ -127,9 +127,11 @@
 | 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
 | 2022.6.25 | 电视剧 | TBS『OLD ROOKIE』ナビ  16:30〜17:00           |    [生](https://www.bilibili.com/video/BV1i94y117sK?p=6&t=1058.9)                                                          |                                                              |
 | 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1 Juice=Juice『「ひとりで生きられそう」って それってねぇ、褒めているの?』 ELAIZA『Close to you』 梅田サイファー『トラボルタカスタム』 yama『桃源郷』          |   [生](https://www.bilibili.com/video/BV1ZY4y1J7tJ)                                                           |                                                              |
-| 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 18:00~21:00            |                                                              |                                                              |
+| 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 18:00~21:00            |  [生](https://www.bilibili.com/video/BV1dT411g7c6)                                                            |                                                              |
 | 2022.6.26 | 电视剧 | 『OLD ROOKIE』21:00~             |                                                              |                                                              |
-| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.1)                           |                                                              |                                                              |
+| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.3)                           |               |                                                              |
+| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 18:00開演 出演:木村達成 生田絵梨花 唯月ふうか 水田航生   |               |                                       |
+| 2022.7.2  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 12:00開演 出演:小関裕太 生田絵梨花 唯月ふうか 水田航生  |               |                                          |
 | 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10   BE:FIRST『Betrayal Game』由薫『lullaby』フォーエイト48『ロミエット』asmi『PAKU』Dios『Virtual Castle』        |                                                              |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                                              |                                                              |
