--- a/year/2022.md
+++ b/year/2022.md
@@ -121,6 +121,7 @@
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
 | 2022.6.18 | 音乐 | 『Venue101EXTRA』NHK大阪ホール公開収録 19:00~20:45            |                                                              |                                                              |
 | 2022.6.18 | 电视剧 | 『世にも奇妙な物語'22 夏の特別編』『メロディに乗せて』夜9時〜             |    [熟](http://www.mytvbt.net/viewthread.php?tid=106236&extra=page%3D1)                                                          |                                                              |
+| 2022.6.21 | 杂志 | 『週刊FLASH』 2022年7月5日号           |     [微博](https://weibo.com/5177703789/LyH23DhYx)                                                         |                                                              |
 | 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |     [微博](https://weibo.com/5177703789/LyNwgg8x9)                                                         |                                                              |
 | 2022.6.22 | CM | 参议院26次选举推动形象大使             |     [熟](https://www.bilibili.com/video/BV1fT411G7WC)                                                         |   [特设主页](https://www.soumu.go.jp/2022senkyo/)                                                           |
 | 2022.6.22 | 新闻   | バリはやッ!ZIP!参议院26次选举相关         |   [网盘](https://pan.baidu.com/s/1TEOAAqDcKq_FHLL7J7TqrA?pwd=0122)         |      |  
@@ -143,9 +144,8 @@
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 14:00 / START 15:00   |                     |                                     |
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30   |                     |                                     |
 | 2022.8.6 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
-| 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                                              |                                                              |
-
+| 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
+| 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)          |
 
 ## 待定
- - 『Dr.コトー』劇場版: 人气漫画《五岛医生诊疗所》讲述了一位医生在离岛进行诊疗的故事. 6.13在外景地与那国岛参加了拍摄
  - 『MEAN GIRLS』音乐剧主演: 2023年1～2月東京建物Brillia HALL　ほか、地方公演あり
