--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -522,6 +522,9 @@
 
 **物料&简要说明**
  - 简介: 这部作品是由主演绫野刚(40岁)饰演的将一生奉献给足球的前职业球员新町亮太郎，从37岁开始作为体育经理新人奋斗的人性电视剧。生田饰演亮太郎的妻子里奈子(荣仓奈奈)的妹妹，美食作家糸山留美。是有着“享受人生的人胜利!”座右铭的自由人，对里奈子来说是很好的商量对象，也是给亮太郎出谋划策值得信赖的女性。
+ - 本篇: 
+   - 第2集cut: https://www.bilibili.com/video/BV1gF411F7K8
+   - 第2集全: https://weibo.com/7737851557/LzHn4nFxN
 
 
 
