--- a/theme/音乐剧&舞台剧汇总.md
+++ b/theme/音乐剧&舞台剧汇总.md
@@ -425,6 +425,7 @@
 - 简介&概念专辑Download: https://m.weibo.cn/status/4586333969847574
 - 本篇: 
   - 7.1 福岡・博多座配信 18:00開演 出演:木村達成 生田絵梨花 唯月ふうか 水田航生  生: https://www.bilibili.com/video/BV11B4y1v7UP
+  - 7.2 福岡・博多座配信 12:00開演 出演:小関裕太 生田絵梨花 唯月ふうか 水田航生  生: https://pan.baidu.com/s/1aslnrKiG3V3iiWq2HXAVOQ?pwd=ix83
 - 概念专辑制作生田绘梨花making
   - https://www.bilibili.com/video/BV1wK411g71t
   - https://www.bilibili.com/video/BV1yV411n7pL
