--- a/year/2022.md
+++ b/year/2022.md
@@ -138,6 +138,7 @@
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.7.9 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.7.16 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
+| 2022.7.17 | 电视剧 | 『OLD ROOKIE』#3 21:00~             |                                          |                                                              |
 | 2022.7.23 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.7.30 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.8.3 | FC | 『Erika Ikuta 2022 summer fun』Zepp DiverCity(TOKYO) OPEN 18:00 / START 19:00   |                     |                                     |
