--- a/year/2022.md
+++ b/year/2022.md
@@ -137,6 +137,7 @@
 | 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10   BE:FIRST『Betrayal Game』由薫『lullaby』フォーエイト48『ロミエット』asmi『PAKU』Dios『Virtual Castle』        |                                                              |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.7.16 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
+| 2022.7.17 | 番组 | 『バナナマンのせっかくグルメ』2.5時間SP 18:30~20:54            |             |       |
 | 2022.7.17 | 电视剧 | 『OLD ROOKIE』#3 21:00~             |                                          |                                                              |
 | 2022.7.23 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.7.30 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
