--- a/year/2022.md
+++ b/year/2022.md
@@ -138,7 +138,7 @@
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.7.17 | 番组 | 『バナナマンのせっかくグルメ』2.5時間SP 18:30~20:54            |  [生](https://www.bilibili.com/video/BV1pt4y1t7CA)           |       |
 | 2022.7.17 | 电视剧 | 『OLD ROOKIE』#3 21:00~             |                                          |                                                              |
-| 2022.7.23 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
+| 2022.7.24 | 电视剧   | 『OLD ROOKIE』#4 21:00~   |           |                      |
 | 2022.7.30 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.8.3 | FC | 『Erika Ikuta 2022 summer fun』Zepp DiverCity(TOKYO) OPEN 18:00 / START 19:00   |                     |                                     |
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 14:00 / START 15:00   |                     |                                     |
