--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -525,9 +525,9 @@
  - 本篇cut: 
    - 第1集cut: https://www.bilibili.com/video/BV1gF411F7K8
    - 第2集cut: https://www.bilibili.com/video/BV1eS4y1n7zH
+   - 第3集cut: https://www.bilibili.com/video/BV1Ta411T754
 
- - 本篇全:
-   - 第1集全: https://weibo.com/7737851557/LzHn4nFxN
+ - 本篇全: http://www.fanxinzhui.com/rr/2432
 
 
 
