--- a/year/2022.md
+++ b/year/2022.md
@@ -76,7 +76,7 @@
 | 2022.3.24 | 杂志   | 『TVfan』5月号 | [微博](https://weibo.com/5531210321/LleeiETVK)‖[微博](https://weibo.com/5177703789/Llom082Rr)  |[tvfan](http://tvfan.jp/?p=1057841) |
 | 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |    [熟](https://www.bilibili.com/video/BV1RS4y1U7VZ/)                                                          |                                                              |
 | 2022.3.27 | 音乐   | 『映画音楽はすばらしい！Ⅳ』2:00~3:29 BS4K   |   [熟](https://www.bilibili.com/video/BV18T4y1e7sJ)                     |     [主页](https://www.nhk.jp/p/ts/V7Z8YMLJN6/)                                                         |
-| 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
+| 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售               |           |   [歌曲](https://pan.baidu.com/s/1d76oKz4xwgrfeP6lPqb__A?pwd=0122 )         |
 | 2022.3.30 | 杂志   | 『週刊TVガイド』 | [微博](https://weibo.com/5177703789/LncjWcoPJ)  |[tvguide](https://www.tvguide.or.jp/) |
 | 2022.3.30 | 杂志   | 『テレビライフ』TV LIFE 2022年7号 | [微博](https://wx2.sinaimg.cn/large/005Ep7hrly1h0tc3dszcfj31td2mhhdt.jpg)  |[tvlife](https://www.tvlife.jp/latest/463860) |
 | 2022.4.1 | 杂志   | 『TVガイドPERSON』VOL.116 | [微博](https://weibo.com/5177703789/LuZvi1TN4)  |[zasshi.tv](https://zasshi.tv/products/17363/) |
@@ -134,10 +134,10 @@
 | 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 18:00開演 出演:木村達成 生田絵梨花 唯月ふうか 水田航生   | [生](https://www.bilibili.com/video/BV11B4y1v7UP)              |                                       |
 | 2022.7.2  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 12:00開演 出演:小関裕太 生田絵梨花 唯月ふうか 水田航生  | [生](https://pan.baidu.com/s/1aslnrKiG3V3iiWq2HXAVOQ?pwd=ix83)              |                                          |
 | 2022.7.3 | 电视剧 | 『OLD ROOKIE』#2 21:00~             |   [cut](https://www.bilibili.com/video/BV1eS4y1n7zH/)     |                         |
-| 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10   BE:FIRST『Betrayal Game』由薫『lullaby』フォーエイト48『ロミエット』asmi『PAKU』Dios『Virtual Castle』        |                                                              |                                                              |
+| 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10   BE:FIRST『Betrayal Game』由薫『lullaby』フォーエイト48『ロミエット』asmi『PAKU』Dios『Virtual Castle』        |   [生](https://pan.baidu.com/s/130xmFaAmFq6ESYZ6ha1s4g?pwd=0122 )  |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.7.17 | 番组 | 『バナナマンのせっかくグルメ』2.5時間SP 18:30~20:54            |  [生](https://www.bilibili.com/video/BV1pt4y1t7CA)           |       |
-| 2022.7.17 | 电视剧 | 『OLD ROOKIE』#3 21:00~             |                                          |                                                              |
+| 2022.7.17 | 电视剧 | 『OLD ROOKIE』#3 21:00~             |     [cut](https://www.bilibili.com/video/BV1Ta411T754)      |                                |
 | 2022.7.24 | 电视剧   | 『OLD ROOKIE』#4 21:00~   |           |                      |
 | 2022.7.30 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.8.3 | FC | 『Erika Ikuta 2022 summer fun』Zepp DiverCity(TOKYO) OPEN 18:00 / START 19:00   |                     |                                     |
