--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -526,7 +526,7 @@
    - 第1集cut: https://www.bilibili.com/video/BV1gF411F7K8
    - 第2集cut: https://www.bilibili.com/video/BV1eS4y1n7zH
    - 第3集cut: https://www.bilibili.com/video/BV1Ta411T754
-
+   - 第4集cut: https://www.bilibili.com/video/BV1DU4y1e7R5
  - 本篇全: http://www.fanxinzhui.com/rr/2432
 
 
