--- a/year/2022.md
+++ b/year/2022.md
@@ -142,7 +142,7 @@
 | 2022.7.30 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.8.3 | FC | 『Erika Ikuta 2022 summer fun』Zepp DiverCity(TOKYO) OPEN 18:00 / START 19:00   |                     |                                     |
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 14:00 / START 15:00   |                     |                                     |
-| 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30   |                     |                                     |
+| 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30 『配信』  |                     |                                     |
 | 2022.8.27 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
