--- a/year/2022.md
+++ b/year/2022.md
@@ -139,10 +139,12 @@
 | 2022.7.17 | 番组 | 『バナナマンのせっかくグルメ』2.5時間SP 18:30~20:54            |  [生](https://www.bilibili.com/video/BV1pt4y1t7CA)           |       |
 | 2022.7.17 | 电视剧 | 『OLD ROOKIE』#3 21:00~             |     [cut](https://www.bilibili.com/video/BV1Ta411T754)      |                                |
 | 2022.7.24 | 电视剧   | 『OLD ROOKIE』#4 21:00~   |  [cut](https://www.bilibili.com/video/BV1DU4y1e7R5)         |                      |
-| 2022.7.30 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
+| 2022.7.30 | 音乐   | 『Venue101』#11 MC 23:00~ 嘉宾:Tani Yuuki『W/X/Y』『Myra』フィロソフィーのダンス『愛の哲学』  |   [生](https://pan.baidu.com/s/1jDYcpyxtxxWlcwX8OfjQQw?pwd=0122)        |                      |
+| 2022.7.31 | 电视剧   | 『OLD ROOKIE』#5 21:00~   |  [cut](https://www.bilibili.com/video/BV1oY4y1w7Zb)         |                      |
 | 2022.8.3 | FC | 『Erika Ikuta 2022 summer fun』Zepp DiverCity(TOKYO) OPEN 18:00 / START 19:00   |                     |                                     |
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 14:00 / START 15:00   |                     |                                     |
-| 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30 『配信』  |                     |                                     |
+| 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30 『配信』  |  [生](https://www.bilibili.com/video/BV1KV4y1776Z)                   |                                     |
+| 2022.8.7 | 电视剧   | 『OLD ROOKIE』#6 21:00~   |          |                      |
 | 2022.8.27 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
