--- a/year/2022.md
+++ b/year/2022.md
@@ -145,7 +145,8 @@
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 14:00 / START 15:00   |                     |                                     |
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30 『配信』  |  [生](https://www.bilibili.com/video/BV1KV4y1776Z)                   |                                     |
 | 2022.8.7 | 电视剧   | 『OLD ROOKIE』#6 21:00~   |  [cut](https://www.bilibili.com/video/BV1fG4y1h7gY)        |                      |
-| 2022.8.14 | 电视剧   | 『OLD ROOKIE』#7 21:00~   |          |                      |
+| 2022.8.14 | 电视剧   | 『OLD ROOKIE』#7 21:00~   | [cut](https://www.bilibili.com/video/BV1FS4y1W7k3)         |                      |
+| 2022.8.21 | 电视剧   | 『OLD ROOKIE』#8 21:00~   |         |                      |
 | 2022.8.27 | 音乐   | 『Venue101』 MC 23:00~   |           |                      |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
