--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -527,6 +527,9 @@
    - 第2集cut: https://www.bilibili.com/video/BV1eS4y1n7zH
    - 第3集cut: https://www.bilibili.com/video/BV1Ta411T754
    - 第4集cut: https://www.bilibili.com/video/BV1DU4y1e7R5
+   - 第5集cut: https://www.bilibili.com/video/BV1oY4y1w7Zb
+   - 第6集cut: https://www.bilibili.com/video/BV1fG4y1h7gY
+   - 第7集cut: https://www.bilibili.com/video/BV1FS4y1W7k3
  - 本篇全: http://www.fanxinzhui.com/rr/2432
 
 
