--- a/year/2022.md
+++ b/year/2022.md
@@ -150,6 +150,7 @@
 | 2022.8.27 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:INI『Password』AyumuImazu『Tangerine』セイレム・イリース『MadatDisney』  |   [生](https://www.bilibili.com/video/BV1FB4y1G762)        |                      |
 | 2022.8.28 | 电视剧   | 『OLD ROOKIE』#9 21:00~   |        |                      |
 | 2022.9.3 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』  |         |                      |
+| 2022.9.4 | 电视剧   | 『OLD ROOKIE』#10 21:00~   |        |                      |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)          |
