--- a/year/2022.md
+++ b/year/2022.md
@@ -156,4 +156,5 @@
 | 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)          |
 
 ## 待定
+ - 『PICU 小児集中治療室』2022年10月富士电视台系月9
  - 『MEAN GIRLS』音乐剧主演: 2023年1～2月東京建物Brillia HALL　ほか、地方公演あり
