--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -530,6 +530,9 @@
    - 第5集cut: https://www.bilibili.com/video/BV1oY4y1w7Zb
    - 第6集cut: https://www.bilibili.com/video/BV1fG4y1h7gY
    - 第7集cut: https://www.bilibili.com/video/BV1FS4y1W7k3
+   - 第8集cut: https://www.bilibili.com/video/BV1RU4y1r7BY
+   - 第9集cut: https://www.bilibili.com/video/BV1fd4y1g7h5
+   - 第10集cut: https://www.bilibili.com/video/BV1j14y1e7yK
  - 本篇全: http://www.fanxinzhui.com/rr/2432
 
 
