--- a/year/2022.md
+++ b/year/2022.md
@@ -151,12 +151,12 @@
 | 2022.8.28 | 电视剧   | 『OLD ROOKIE』#9 21:00~   | [cut](https://www.bilibili.com/video/BV1fd4y1g7h5)       |                      |
 | 2022.9.3 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』  |         |                      |
 | 2022.9.4 | 电视剧   | 『OLD ROOKIE』#10 21:00~   |  [cut](https://www.bilibili.com/video/BV1j14y1e7yK)      |                      |
-| 2022.9.10 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:櫻坂46『摩擦係数』GENERATIONS『チカラノカギリ』水曜日のカンパネラ『エジソン』  |         |                      |
+| 2022.9.10 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:櫻坂46『摩擦係数』GENERATIONS『チカラノカギリ』水曜日のカンパネラ『エジソン』  |   [cut](https://weibo.com/5177703789/M5ixtgKma)      |                      |
 | 2022.9.17 | 音乐   | 『Venue101』 MC 23:00~   |         |                      |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
+| 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)          |
 
 ## 待定
- - 『PICU 小児集中治療室』2022年10月富士电视台系月9
  - 『MEAN GIRLS』音乐剧主演: 2023年1～2月東京建物Brillia HALL　ほか、地方公演あり
