--- a/year/2022.md
+++ b/year/2022.md
@@ -152,9 +152,10 @@
 | 2022.9.3 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』  |         |                      |
 | 2022.9.4 | 电视剧   | 『OLD ROOKIE』#10 21:00~   |  [cut](https://www.bilibili.com/video/BV1j14y1e7yK)      |                      |
 | 2022.9.10 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:櫻坂46『摩擦係数』GENERATIONS『チカラノカギリ』水曜日のカンパネラ『エジソン』  |   [cut](https://weibo.com/5177703789/M5ixtgKma)      |                      |
-| 2022.9.17 | 音乐   | 『Venue101』 MC 23:00~   |         |                      |
+| 2022.9.17 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:DISH『Replay』Rules feat. 土屋太鳳『TAIKING』Snow Man『Juicy』 | [生](https://pan.baidu.com/s/1mkAzBagKoKkwu2cSN5xKdQ?pwd=0122)       |                      |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.9.26 | 新闻   | 闹钟TV-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/5177703789/M7vNov4Ku)       |  
+| 2022.9.26 | 新闻   | nonstop-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/tv/show/1034:4818308571267143)       |  
 | 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)  [日刊sports](https://weibo.com/5177703789/M7t650QM9)  [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)          |
 | 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)          |
