--- a/year/2022.md
+++ b/year/2022.md
@@ -149,7 +149,7 @@
 | 2022.8.21 | 电视剧   | 『OLD ROOKIE』#8 21:00~   | [cut](https://www.bilibili.com/video/BV1RU4y1r7BY)        |                      |
 | 2022.8.27 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:INI『Password』AyumuImazu『Tangerine』セイレム・イリース『MadatDisney』  |   [生](https://www.bilibili.com/video/BV1FB4y1G762)        |                      |
 | 2022.8.28 | 电视剧   | 『OLD ROOKIE』#9 21:00~   | [cut](https://www.bilibili.com/video/BV1fd4y1g7h5)       |                      |
-| 2022.9.3 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』  |         |                      |
+| 2022.9.3 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』  |  [生](https://pan.baidu.com/s/1fVLOxH75ufTkE8Q-b0Q7Kg?pwd=0122)       |                      |
 | 2022.9.4 | 电视剧   | 『OLD ROOKIE』#10 21:00~   |  [cut](https://www.bilibili.com/video/BV1j14y1e7yK)      |                      |
 | 2022.9.10 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:櫻坂46『摩擦係数』GENERATIONS『チカラノカギリ』水曜日のカンパネラ『エジソン』  |   [cut](https://weibo.com/5177703789/M5ixtgKma)      |                      |
 | 2022.9.17 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:DISH『Replay』Rules feat. 土屋太鳳『TAIKING』Snow Man『Juicy』 | [生](https://pan.baidu.com/s/1mkAzBagKoKkwu2cSN5xKdQ?pwd=0122)       |                      |
