--- a/year/2022.md
+++ b/year/2022.md
@@ -156,6 +156,7 @@
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.9.26 | 新闻   | 闹钟TV-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/5177703789/M7vNov4Ku)       |  
 | 2022.9.26 | 新闻   | nonstop-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/tv/show/1034:4818308571267143)       |  
+| 2022.10.1 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#1          |           |                                                              |
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |                                   |                                          |
 | 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)  [日刊sports](https://weibo.com/5177703789/M7t650QM9)  [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)          |
