--- a/year/2022.md
+++ b/year/2022.md
@@ -131,7 +131,7 @@
 | 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 18:00~21:00            |  [熟](https://www.bilibili.com/video/BV1C94y197qF)           |       |
 | 2022.6.26 | 电视剧 | 『OLD ROOKIE』#1 21:00~             |    [cut](https://www.bilibili.com/video/BV1gF411F7K8/)      |                                    |
 | 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.3)                           |               |                                                              |
-| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 18:00開演 出演:木村達成 生田絵梨花 唯月ふうか 水田航生   | [生](https://www.bilibili.com/video/BV11B4y1v7UP)              |                                       |
+| 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 18:00開演 出演:木村達成 生田絵梨花 唯月ふうか 水田航生   | [生](https://www.bilibili.com/video/BV11B4y1v7UP)              |    [熟](https://weibo.com/5177703789/M8lMvezdB)                                   |
 | 2022.7.2  | 音乐剧 | 『四月は君の嘘』福岡・博多座配信 12:00開演 出演:小関裕太 生田絵梨花 唯月ふうか 水田航生  | [生](https://pan.baidu.com/s/1aslnrKiG3V3iiWq2HXAVOQ?pwd=ix83)              |                                          |
 | 2022.7.3 | 电视剧 | 『OLD ROOKIE』#2 21:00~             |   [cut](https://www.bilibili.com/video/BV1eS4y1n7zH/)     |                         |
 | 2022.7.3 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2   23:40-24:10   BE:FIRST『Betrayal Game』由薫『lullaby』フォーエイト48『ロミエット』asmi『PAKU』Dios『Virtual Castle』        |   [生](https://pan.baidu.com/s/130xmFaAmFq6ESYZ6ha1s4g?pwd=0122 )  |                                                              |
@@ -143,7 +143,7 @@
 | 2022.7.31 | 电视剧   | 『OLD ROOKIE』#5 21:00~   |  [cut](https://www.bilibili.com/video/BV1oY4y1w7Zb)         |                      |
 | 2022.8.3 | FC | 『Erika Ikuta 2022 summer fun』Zepp DiverCity(TOKYO) OPEN 18:00 / START 19:00   |                     |                                     |
 | 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 14:00 / START 15:00   |                     |                                     |
-| 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30 『配信』  |  [生](https://www.bilibili.com/video/BV1KV4y1776Z)                   |                                     |
+| 2022.8.6 | FC | 『Erika Ikuta 2022 summer fun』Zepp Namba(OSAKA) OPEN 17:30 / START 18:30 『配信』  |  [生](https://www.bilibili.com/video/BV1KV4y1776Z)                   |   [熟](https://weibo.com/5177703789/M3f0DwHpf)                                  |
 | 2022.8.7 | 电视剧   | 『OLD ROOKIE』#6 21:00~   |  [cut](https://www.bilibili.com/video/BV1fG4y1h7gY)        |                      |
 | 2022.8.14 | 电视剧   | 『OLD ROOKIE』#7 21:00~   | [cut](https://www.bilibili.com/video/BV1FS4y1W7k3)         |                      |
 | 2022.8.21 | 电视剧   | 『OLD ROOKIE』#8 21:00~   | [cut](https://www.bilibili.com/video/BV1RU4y1r7BY)        |                      |
@@ -157,6 +157,8 @@
 | 2022.9.26 | 新闻   | 闹钟TV-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/5177703789/M7vNov4Ku)       |  
 | 2022.9.26 | 新闻   | nonstop-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/tv/show/1034:4818308571267143)       |  
 | 2022.10.1 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#1          |           |                                                              |
+| 2022.10.3 | 番组 | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45～15:45         |                |          |
+| 2022.3.12 | 番组 | 富士电视台「ドラマツアーズ2022秋 ～豪華俳優陣勢ぞろい月9＆月10SP～」 14:30～15:25        |                |          |
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |                                   |                                          |
 | 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2          |           |                                                              |
 | 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
