--- a/year/2022.md
+++ b/year/2022.md
@@ -156,14 +156,14 @@
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                   |                                          |
 | 2022.9.26 | 新闻   | 闹钟TV-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/5177703789/M7vNov4Ku)       |  
 | 2022.9.26 | 新闻   | nonstop-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/tv/show/1034:4818308571267143)       |  
-| 2022.10.1 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#1          |           |                                                              |
+| 2022.10.1 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#1 嘉宾:ITZY『BlahBlahBlah』 SaucyDog『優しさに溢れた世界で』 milet『insideyou』『FinalCall』 YOAKE『ねぇ』 Liella!『WEWILL!!』   |  [生](https://www.bilibili.com/video/BV1iN4y1N7CD)         |                                                              |
 | 2022.10.3 | 番组 | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45～15:45         |                |          |
 | 2022.3.12 | 番组 | 富士电视台「ドラマツアーズ2022秋 ～豪華俳優陣勢ぞろい月9＆月10SP～」 14:30～15:25        |                |          |
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |                                   |                                          |
-| 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2          |           |                                                              |
+| 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2   嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビートDEトーヒ』   |           |                                                              |
 | 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
-| 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)  [日刊sports](https://weibo.com/5177703789/M7t650QM9)  [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)          |
-| 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)          |
+| 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
+| 2022.12.16 | 电影   | 『Dr.コトー診療所』劇場版上映               |                          |      [周刊FLASH](https://weibo.com/5177703789/LyH23DhYx)   [日刊sports](https://weibo.com/5177703789/M7t650QM9)  [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)         |
 
 ## 待定
  - 『MEAN GIRLS』音乐剧主演: 2023年1～2月東京建物Brillia HALL　ほか、地方公演あり
