--- a/year/2022.md
+++ b/year/2022.md
@@ -157,7 +157,7 @@
 | 2022.9.26 | 新闻   | 闹钟TV-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/5177703789/M7vNov4Ku)       |  
 | 2022.9.26 | 新闻   | nonstop-『Dr.コトー診療所』                                              |      [熟](https://weibo.com/tv/show/1034:4818308571267143)       |  
 | 2022.10.1 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#1 嘉宾:ITZY『BlahBlahBlah』 SaucyDog『優しさに溢れた世界で』 milet『insideyou』『FinalCall』 YOAKE『ねぇ』 Liella!『WEWILL!!』   |  [生](https://www.bilibili.com/video/BV1iN4y1N7CD)         |                                                              |
-| 2022.10.3 | 番组 | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45～15:45         |                |          |
+| 2022.10.3 | 番组 | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45～15:45         |   [生](https://www.bilibili.com/video/BV1hT411K7aU/)             |          |
 | 2022.10.8 | 番组 | 富士电视台「ドラマツアーズ2022秋 ～豪華俳優陣勢ぞろい月9＆月10SP～」 14:30～15:25        |                |          |
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |                                   |                                          |
 | 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2   嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビートDEトーヒ』   |           |                                                              |
