--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -165,9 +165,11 @@ sidebar_position: 1
 | 2022.10.1  | 音乐    | 『Venue101EXTRA』NHK 東京ホール放送#1 嘉宾:ITZY『BlahBlahBlah』 SaucyDog『優しさに溢れた世界で』 milet『insideyou』『FinalCall』 YOAKE『ねぇ』 Liella!『WEWILL!!』                       |                            [生](https://www.bilibili.com/video/BV1iN4y1N7CD)                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.10.3  | 番组    | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45 ～ 15:45                                                                                                         |                            [生](https://www.bilibili.com/video/BV1hT411K7aU/)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.10.4  | CM      | 『e.design 事故保险』「发生事故的时候也安心篇」                                                                                                                                          |                               [CM](https://weibo.com/5177703789/M8ISWud5V)                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.10.8  | 番组    | 富士电视台「ドラマツアーズ 2022 秋 ～豪華俳優陣勢ぞろい月 9＆月 10SP ～」 14:30 ～ 15:25                                                                                                 |                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.10.8  | 音乐    | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」) 18:00                                                                                                                                 |                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.10.8  | 音乐    | 『Venue101EXTRA』NHK 東京ホール放送#2 嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビート DE トーヒ』                                                    |                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.10.10 | 电视剧  | 富士电视台『PICU 小児集中治療室』#1 21:00~                                                                                                                                               |                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.12.9  | 电影    | 『映画かいけつゾロリ ラララ ♪ スターたんじょう』                                                                                                                                         |                                                                                                          | [情报公开](https://weibo.com/5177703789/LEb1tupaf)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| 2022.10.8 | 番组 | 富士电视台「ドラマツアーズ2022秋 ～豪華俳優陣勢ぞろい月9＆月10SP～」 14:30～15:25        |  [生](https://www.bilibili.com/video/BV1vt4y1c7Ne)              |          |
+| 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |     [生](https://www.bilibili.com/video/BV1kD4y1y7PA)                              |                                          |
+| 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2   嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビートDEトーヒ』   |    [生](https://www.bilibili.com/video/BV1eB4y1j7jw)         |           |
+| 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
+| 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |       |                      |
+| 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映                                                                                                                                                            |                                                                                                          | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)                                                                                                                                                                                                                                                                                                                                                                                                              |
